--- a/ShopContent/MainWindow.xaml
+++ b/ShopContent/MainWindow.xaml
@@ -5,8 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ShopContent"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" FontFamily="Century Gothic" Icon="">
     <Grid>
+        <Frame x:Name="frame" NavigationUIVisibility="Hidden" Margin="5,55,5,5" Background="White"/>
+        <Grid VerticalAlignment="Top" Height="50" Background="White">
+            <Grid.Effect>
+                <DropShadowEffect Direction="270" BlurRadius="5" ShadowDepth="2" Opacity="0.5"/>
+            </Grid.Effect>
+        </Grid>
+        <Label Content="Вещи для дома" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15pt"/>
+        <Image Width="30" Height="30" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Left"
+               Source="" MouseDown="OpenIndex"/>
 
     </Grid>
 </Window>
